# MediaElch

./: .clang-format  .clang-tidy  .cmake-format  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  Build.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  COPYING  DownloadManager.cpp  DownloadManager.h  DownloadManagerElement.cpp  DownloadManagerElement.h  ExportDialog.cpp  ExportDialog.h  ExportDialog.ui  FilesWidget.cpp  FilesWidget.h  FilesWidget.ui  Globals.h  Helper.cpp  Helper.h  ImagePreviewDialog.cpp  ImagePreviewDialog.h  ImagePreviewDialog.ui  Jenkinsfile  MainWindow.cpp  MainWindow.h  MainWindow.ui  Manager.cpp  Manager.h  (+78 more)
docs/: CMakeLists.txt  README.md  advancedsettings.xml
docs/admin/: README.md  codecov.md  coverity.md  packaging.md  release.md  transifex.md  who-to-follow.md
docs/adr/: README.md  project-structure.md  scraper-interface.md
docs/concepts/: README.md  module-system.md  renamer.md
docs/contributing/: README.md  continuous-integration.md  database.md  dependencies.md  development-setup.md  introduction.md  packaging.md  project-structure.md  sanitizers.md  scraper-interface.md  testing.md
src/: CMakeLists.txt  main.cpp
src/cli/: CMakeLists.txt  checkVersionUpdate.cpp  checkVersionUpdate.h  common.cpp  common.h  info.cpp  info.h  list.cpp  list.h  main.cpp  reload.cpp  reload.h  scraper.cpp  scraper.h  show.cpp  show.h
src/concerts/: CMakeLists.txt  Concert.cpp  Concert.h  ConcertController.cpp  ConcertController.h  ConcertFileSearcher.cpp  ConcertFileSearcher.h  ConcertFilesWidget.cpp  ConcertFilesWidget.h  ConcertFilesWidget.ui  ConcertInfoWidget.cpp  ConcertInfoWidget.h  ConcertInfoWidget.ui  ConcertModel.cpp  ConcertModel.h  ConcertProxyModel.cpp  ConcertProxyModel.h  ConcertSearch.cpp  ConcertSearch.h  ConcertSearch.ui  ConcertSearchWidget.cpp  ConcertSearchWidget.h  ConcertSearchWidget.ui  ConcertStreamDetailsWidget.cpp  ConcertStreamDetailsWidget.h  ConcertStreamDetailsWidget.ui  ConcertWidget.cpp  ConcertWidget.h  ConcertWidget.ui
src/data/: Actor.cpp  Actor.h  ActorModel.cpp  AllMusicId.cpp  AllMusicId.h  CMakeLists.txt  Certification.cpp  Certification.h  Concert.cpp  Concert.h  ConcertFileSearcher.cpp  ConcertFileSearcher.h  ConcertModel.cpp  ConcertModel.h  ConcertProxyModel.cpp  ConcertProxyModel.h  ConcertScraperInterface.h  Database.cpp  Database.h  EpisodeNumber.cpp  EpisodeNumber.h  Filter.cpp  Filter.h  Image.cpp  Image.h  ImageCache.cpp  ImageCache.h  ImageProviderInterface.h  ImdbId.cpp  ImdbId.h  Locale.cpp  Locale.h  MediaCenterInterface.h  MediaInfoFile.cpp  MediaInfoFile.h  MediaStatusColumn.cpp  MediaStatusColumn.h  Movie.cpp  Movie.h  MovieCrew.cpp  (+56 more)
src/database/: CMakeLists.txt  ConcertPersistence.cpp  ConcertPersistence.h  Database.cpp  Database.h  DatabaseId.cpp  DatabaseId.h  MoviePersistence.cpp  MoviePersistence.h  MusicPersistence.cpp  MusicPersistence.h  TvShowPersistence.cpp  TvShowPersistence.h
src/downloads/: CMakeLists.txt  DownloadsWidget.cpp  DownloadsWidget.h  Extractor.cpp  Extractor.h  FileWorker.cpp  FileWorker.h  ImportActions.cpp  ImportActions.h  ImportActions.ui  ImportDialog.cpp  ImportDialog.h  ImportDialog.ui  MakeMkvCon.cpp  MakeMkvCon.h  MakeMkvDialog.cpp  MakeMkvDialog.h  MakeMkvDialog.ui  MyFile.cpp  MyFile.h  UnpackButtons.h  UnpackButtons.ui
src/export/: CMakeLists.txt  CsvExport.cpp  CsvExport.h  ExportDialog.cpp  ExportDialog.h  ExportTemplate.cpp  ExportTemplate.h  ExportTemplateLoader.cpp  ExportTemplateLoader.h  MediaExport.cpp  MediaExport.h  SimpleEngine.cpp  SimpleEngine.h  TableWriter.cpp  TableWriter.h
src/file/: CMakeLists.txt  FileFilter.cpp  FileSystem.cpp  FileSystem.h  FilenameUtils.cpp  FilenameUtils.h  Filesystem.cpp  Filesystem.h  NameFormatter.cpp  NameFormatter.h  Path.cpp  Path.h
src/file_search/: CMakeLists.txt  ConcertFileSearcher.cpp  ConcertFileSearcher.h  MovieFilesOrganizer.cpp  MovieFilesOrganizer.h  MusicFileSearcher.cpp  MusicFileSearcher.h  TvShowFileSearcher.cpp  TvShowFileSearcher.h
src/globals/: Actor.cpp  Actor.h  ActorModel.cpp  ActorModel.h  CMakeLists.txt  ComboDelegate.cpp  ComboDelegate.h  Containers.cpp  Containers.h  DownloadManager.cpp  DownloadManager.h  DownloadManagerElement.cpp  DownloadManagerElement.h  Filter.cpp  Filter.h  Globals.cpp  Globals.h  Helper.cpp  Helper.h  ImageDialog.cpp  ImageDialog.h  ImageDialog.ui  ImagePreviewDialog.cpp  ImagePreviewDialog.h  JsonRequest.cpp  JsonRequest.h  LocaleStringCompare.h  Manager.cpp  Manager.h  Math.cpp  MediaDirectory.cpp  MediaDirectory.h  MessageIds.cpp  MessageIds.h  Meta.cpp  Meta.h  Module.cpp  Module.h  NameFormatter.cpp  NameFormatter.h  (+19 more)
src/image/: CMakeLists.txt  Image.cpp  Image.h  ImageCapture.cpp  ImageCapture.h  ImageModel.cpp  ImageModel.h  ImageProxyModel.cpp  ImageProxyModel.h  ImageWidget.cpp  ImageWidget.h  ImageWidget.ui  ThumbnailDimensions.cpp  ThumbnailDimensions.h
src/imageProviders/: CMakeLists.txt  FanartTv.cpp  FanartTv.h  FanartTvMusic.cpp  FanartTvMusic.h  FanartTvMusicArtists.cpp  FanartTvMusicArtists.h  TMDbImages.cpp  TMDbImages.h  TheTvDbImages.cpp  TheTvDbImages.h
src/import/: CMakeLists.txt  DownloadFileSearcher.cpp  DownloadFileSearcher.h  Extractor.cpp  Extractor.h  FileWorker.cpp  FileWorker.h  MakeMkvCon.cpp  MyFile.cpp  MyFile.h
src/imports/: CMakeLists.txt  DownloadFileSearcher.cpp  DownloadFileSearcher.h  Extractor.cpp  FileWorker.cpp  FileWorker.h  MakeMkvCon.cpp  MakeMkvCon.h  MyFile.cpp
src/log/: CMakeLists.txt  Log.cpp  Log.h
src/main/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  FileScannerDialog.cpp  FileScannerDialog.h  FileScannerDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Message.cpp  Message.h  Message.ui  MyIconFont.cpp  MyIconFont.h  Navbar.cpp  Navbar.h  Navbar.ui  Update.cpp  Update.h
src/media/: AsyncImage.cpp  AsyncImage.h  CMakeLists.txt  FileFilter.cpp  FileFilter.h  FilenameUtils.cpp  ImageCache.cpp  Path.cpp  (+12 more)
test/: CMakeLists.txt  README.md  main.cpp  qtCatchHelper.h  test_helpers.h
(+2521 files in other folders)
